# pima-integration

./: .gitignore  pyproject.toml  requirements.txt
alembic/versions/: 4d3fee43a322_create_tables_3_0.py  ecf511cd34bf_create_tables_2_0.py
app/: main.py
app/core/: __init__.py  firestore_util.py  gps_splitter_util.py  logging_util.py  mapping.py  postgresql_util.py
app/models/: __init__.py  attendance.py  check.py  coffee_variety.py  farm.py  farm_visit.py  farmer.py  farmer_group.py  fv_best_practice.py  fv_best_practice_answer.py  household.py  image.py  location.py  observation.py  observation_result.py  program.py  project.py  project_staff_role.py  staff.py  training_module.py  training_session.py  user.py  wetmill.py  wetmill_visit.py  wv_survey_question_response.py  wv_survey_response.py
app/schemas/: __init__.py  attendance.py  check.py  coffee_variety.py  farm.py  farm_visit.py  farmer.py  fv_best_practice.py  fv_best_practice_answer.py  household.py  image.py  observation.py  observation_result.py  training_session.py  wetmill.py  wetmill_visit.py  wv_survey_question_response.py  wv_survey_response.py
app/services/: __init__.py  attendance.py  check.py  coffee_variety.py  farm.py  farm_visit.py  farmer.py  fv_best_practice.py  fv_best_practice_answer.py  household.py  image.py  observation.py  observation_result.py  resolvers.py  skip_transformation.py  training_session.py  wetmill.py  wetmill_visit.py  wv_survey_question_response.py  wv_survey_response.py
app/transformations/: __init__.py  attendance.py  check.py  coffee_variety.py  farm.py  farmer.py  (+12 more)
(+15 files in other folders)
